# ziggurat

./: Cargo.toml  README  README.md
src/: cli.rs  epub.rs  google.rs  llm.rs  main.rs  options.rs  pdf.rs  tui.rs
src/filetypes/: mod.rs
src/frontend/: cli.rs  config.rs  tui.rs
src/providers/: mod.rs
