[package]
name = "ziggurat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
epub = "2.1.2"
epub-builder = "0.7.4"
eyre = "0.6.12"
html2text = "0.12.6"
lopdf = "0.34.0"
regex = "1.11.0"
reqwest = "0.12.8"
serde = "1.0.210"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
