[package]
name = "ziggurat"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
callm = "0.2.0"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
epub = "2.1.2"
epub-builder = "0.7.4"
eyre = "0.6.12"
futures = "0.3.31"
lopdf = "0.34.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tl = "0.7.8"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
